--- a/index.html
+++ b/index.html
@@ -585,12 +585,12 @@ const slideData = [
                             <strong>Scope:</strong> Future Expansion <span class="px-2 py-0.5 bg-blue-500/20 text-blue-300 text-xs font-semibold rounded-full ml-2">Future Expansion</span>
                         </p>
                         <ul class="list-disc list-inside text-sm text-gray-300 mt-2 pl-4">
-                            <li>Engaged Users: 10% of Combined SAM (~1.75M users).</li>
+                            <li>Engaged Users: 10% of Immediate Focus SOM (~3.05M users).</li>
                             <li>Avg. Investment: ₹1 Lakh per user.</li>
                             <li>Commission Rate: 0.3%.</li>
                         </ul>
                         <p class="text-xl font-bold text-green-400 mt-4">
-                            Projected Annual Revenue: ~₹52.5 Crores
+                            Projected Annual Revenue: ~₹9.15 Crores
                         </p>
                     </div>
 
@@ -601,11 +601,11 @@ const slideData = [
                             <strong>Scope:</strong> Future Expansion <span class="px-2 py-0.5 bg-blue-500/20 text-blue-300 text-xs font-semibold rounded-full ml-2">Future Expansion</span>
                         </p>
                         <ul class="list-disc list-inside text-sm text-gray-300 mt-2 pl-4">
-                            <li>Engaged Users: 5% of Combined SAM (~0.875M users).</li>
+                            <li>Engaged Users: 5% of Immediate Focus SOM (~3.05M users).</li>
                             <li>Avg. Commission per Policy: ₹3,000.</li>
                         </ul>
                         <p class="text-xl font-bold text-green-400 mt-4">
-                            Projected Annual Revenue: ~₹262.5 Crores
+                            Projected Annual Revenue: ~₹45.75 Crores
                         </p>
                     </div>
 
@@ -631,19 +631,19 @@ const slideData = [
                             <strong>Scope:</strong> Future Expansion <span class="px-2 py-0.5 bg-blue-500/20 text-blue-300 text-xs font-semibold rounded-full ml-2">Future Expansion</span>
                         </p>
                         <ul class="list-disc list-inside text-sm text-gray-300 mt-2 pl-4">
-                            <li>Engaged Users: 1% of Combined SAM (~0.175M users).</li>
+                            <li>Engaged Users: 1% of Immediate Focus SOM (~3.05M users).</li>
                             <li>Avg. Transaction Value: ₹2 Lakhs per user.</li>
                             <li>Commission Rate: 1.5%.</li>
                         </ul>
                         <p class="text-xl font-bold text-green-400 mt-4">
-                            Projected Annual Revenue: ~₹52.5 Crores
+                            Projected Annual Revenue: ~₹9.15 Crores
                         </p>
                     </div>
 
                     <div class="content-card bg-white/10 p-6 col-span-full text-center animated-item animated-item-10">
                         <h3 class="text-3xl font-extrabold text-orange-400 mb-4">Total Illustrative Annual Revenue Potential:</h3>
                         <p class="text-5xl font-extrabold text-green-400 poppins">
-                            ~₹599.83 Crores <br> (approx. US$72 Million)
+                            ~₹278.57 Crores <br> (approx. US$33.4 Million)
                         </p>
                         <p class="text-sm text-gray-400 mt-4">
                             This projection is based on capturing a realistic market share within defined segments and a diversified, facilitation-based revenue model that scales with user engagement.
